--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,19 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container px-4 px-lg-5">
+        <a class="navbar-brand" href="#!">Cal Calculation</a>
+      </div>
+    </nav>
+    <header class="bg-dark py-5">
+      <div class="container px-4 px-lg-5 my-5">
+        <div class="text-center text-white">
+          <h1 class="display-4 fw-bolder">食生活、チェックしてみませんか？</h1>
+            <p class="lead fw-normal text-white-50 mb-0">Why don't you check your eating habits?</p>
+        </div>
+      </div>
+    </header>
     <%= yield %>
   </body>
 </html>
