--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="#!">Cal Calculation (Author: Haruka Kadokura)</a>
+        <%= link_to 'Cal Calculation (Author: Haruka Kadokura)', :root, class: "navbar-brand" %>
       </div>
     </nav>
     <%= yield %>
