表示する文言を修正

--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -9,7 +9,7 @@
 <%= form_with url: foods_results_path, method: :get, local: true do |f| %>
   <section class="py-5">
     <div class="container px-4 px-lg-5">
-      <h2 class="fw-bolder border-bottom border-secondary mb-5">食べたいメニューをそれぞれ選択してください</h2>
+      <h2 class="fw-bolder border-bottom border-secondary mb-5">食べたいメニューをそれぞれ選択してください。</h2>
     </div>
     <% if flash.alert %>
       <div class="container px-4 px-lg-5">
